# TetravexParallel

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp  main.cpp
src/game/: Board.cpp  Board.h  Element.h  Game.cpp  Game.h  Piece.cpp  Piece.h
src/resolver/: ParallelResolver.cpp  ParallelResolver.h  SequentialResolver.cpp  SequentialResolver.h  ThreadPool.cpp  ThreadPool.h
src/test/: ImportGame.cpp  ImportGame.h
